--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -19,7 +19,6 @@ rabbitmq:
 
 nginx:
   # Note you cannot scale if you use conteiner_name
-  container_name: mezzanine-nginx
   image: nginx
   hostname: nginx
   volumes:
@@ -30,7 +29,6 @@ nginx:
 
 smtp:
   # Note you cannot scale if you use conteiner_name
-  container_name: mezzanine-smtp
   image: catatnight/postfix
   hostname: postfix
   environment:
@@ -41,7 +39,6 @@ smtp:
 
 db:
   # Note you cannot scale if you use conteiner_name
-  container_name: mezzanine-db
   image: kartoza/postgis:9.4-2.1
   volumes:
     - ./pg/postgres_data:/var/lib/postgresql
@@ -62,7 +59,7 @@ uwsgi-base:
     - DATABASE_HOST=db
     - RABBITMQ_HOST=rabbitmq
     - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
-    - VIRTUAL_HOST=mezzanine.kartoza.com
+    - VIRTUAL_HOST=channel.kartoza.com
     - VIRTUAL_PORT=8080
     # Set your locale - you need to ensure this is created in Dockerfile too...
     - LC_ALL=en_ZA.UTF-8
@@ -88,7 +85,6 @@ uwsgi-ephemeral:
 uwsgi:
   # Note you cannot scale if you use conteiner_name
   extends: uwsgi-base
-  container_name: mezzanine-uwsgi
   links:
     - smtp:smtp
     - db:db
@@ -98,7 +94,6 @@ uwsgi:
 
 dbbackups:
   # Note you cannot scale if you use conteiner_name
-  container_name: mezzanine-db-backups
   image: kartoza/pg-backup:9.4
   hostname: pg-backups
   volumes:
@@ -108,7 +103,7 @@ dbbackups:
   environment:
     # take care to let the project name below match that
     # declared in the top of the makefile
-    - DUMPPREFIX=PG_mezzanine
+    - DUMPPREFIX=PG_channel
     # These are all defaults anyway, but setting explicitly in
     # case we ever want to ever use different credentials
     - PGUSER=docker
@@ -124,9 +119,7 @@ redis:
 # This is normally the main entry point for a production server
 web:
   # Note you cannot scale if you use conteiner_name
-  container_name: mezzanine-web
-  image: nginx
-  hostname: nginx
+  build: docker-web
   volumes:
     - ./sites-enabled:/etc/nginx/conf.d:ro
     # I dont use volumes_from as I want to use the ro modifier
@@ -144,10 +137,9 @@ web:
 # from produ environment if wanted
 devweb:
   # Note you cannot scale if you use conteiner_name
-  container_name: mezzanine-dev-web
   build: docker
   dockerfile: Dockerfile-dev
-  hostname: mezzanine-dev-web
+  hostname: channel-dev-web
   environment:
     - DATABASE_NAME=gis
     - DATABASE_USERNAME=docker
@@ -156,7 +148,7 @@ devweb:
     - RABBITMQ_HOST=rabbitmq
     - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
     - PYTHONPATH=/home/web/django_project
-    - VIRTUAL_HOST=mezzanine.kartoza.com
+    - VIRTUAL_HOST=channel.kartoza.com
     - VIRTUAL_PORT=8080
   volumes:
     - ../django_project:/home/web/django_project
@@ -187,7 +179,7 @@ worker:
      - DATABASE_QGIS_HOST=db_gis
      - RABBITMQ_HOST=rabbitmq
      - DJANGO_SETTINGS_MODULE=core.settings.prod_docker
-     - VIRTUAL_HOST=mezzanine.kartoza.com
+     - VIRTUAL_HOST=channel.kartoza.com
      - VIRTUAL_PORT=8080
      - C_FORCE_ROOT=true
    volumes:
