--- a/deployment/docker/REQUIREMENTS.txt
+++ b/deployment/docker/REQUIREMENTS.txt
@@ -14,6 +14,6 @@ channels
 asgi_redis
 
 #Rest Framework API
-djangorestframework
+djangorestframework>=3.2,<3.7
 #channel_api
 git+git://github.com/euclidian/django-channel-api-module.git
